# pbos

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  configure  configure.ps1
hal/: CMakeLists.txt
hal/aarch64/: CMakeLists.txt
hal/aarch64/boot/: CMakeLists.txt
hal/i386/: CMakeLists.txt  arch.json  debug.h  init.c  init.cc  initcar.h  initcar.hh  irq.h  logger.h  misc.h  mm.h  mm.hh  proc.h  proc.hh  syscall.c  syscall.cc  syscall.h
hal/i386/boot/: CMakeLists.txt  init.S  kloader.c  kloader.h  main.c  mb.c  mb.h  misc.h
hal/i386/dbg/: stacktrace.S
hal/i386/display/: vga.c  vga.cc  vga.h
hal/i386/exec/: init.c  init.cc
hal/i386/initcar/: fileio.c  fileio.cc  init.c  init.cc
hal/i386/irq/: init.c  init.cc  irq.S  irq.c  irq.cc  misc.c  misc.cc  syscall.S
hal/i386/logger/: logger.cc
hal/i386/misc/: panic.c  panic.cc  spinlock.c
hal/i386/mm/: CMakeLists.txt  context.c  context.cc  init.c  init.cc  iommap.cc  iommap.hh  misc.c  misc.cc  misc.h  skid.h
hal/i386/mm/iommap/: iommap.cc  iommap.hh
hal/i386/mm/kima/: CMakeLists.txt  init.c  init.cc  init.hh  malloc.c  malloc.cc  ublk.c  ublk.cc  ublk.hh  vmalloc.c  vmalloc.cc  vpgdesc.c  vpgdesc.cc  vpgdesc.hh
hal/i386/mm/pgalloc/: find.c  find.cc  pgalloc.c  pgalloc.cc  pgalloc.h  pgalloc.hh
hal/i386/mm/skid/: alloc.c  dbg.c  dbg.h  frag.c  frag.h  pchunk.c  pchunk.h  uchunk.c  uchunk.h  vchunk.c  vchunk.h
hal/i386/mm/vmmgr/: vm.c  vm.cc  vm.h  vpm.c  vpm.cc
hal/i386/proc/: context.S  context.c  context.cc  init.c  init.cc  proc.c  proc.cc  thread.c  thread.cc
hal/i386/smp/: CMakeLists.txt  init.cc
hal/i386/syscall/: CMakeLists.txt  inscore.h  pbcore.c  pbcore.cc  pbcore.h
hal/x86_64/: CMakeLists.txt  README.md  arch.json  debug.h  init.cc  initcar.hh  irq.h  irq.hh  logger.hh  misc.h  mm.h  mm.hh  proc.hh  syscall.cc  syscall.h
hal/x86_64/acpi/: misc.cc
hal/x86_64/boot/: CMakeLists.txt  boot.cc  main.c  main.cc
hal/x86_64/dbg/: stacktrace.S
hal/x86_64/display/: vga.cc  vga.h
hal/x86_64/ds/: blfb.cc  blfb.hh
hal/x86_64/exec/: init.cc
hal/x86_64/initcar/: fileio.cc  init.cc
hal/x86_64/io/: ioport.cc
hal/x86_64/irq/: init.cc  irq.S  irq.cc  isr.S  misc.cc  syscall.S
hal/x86_64/kd/: CMakeLists.txt  gdb.cc  logger.cc  stacktrace.cc  target.xml
hal/x86_64/kf/: atomic.cc  spinlock.cc
hal/x86_64/km/: panic.cc
hal/x86_64/logger/: logger.cc
hal/x86_64/misc/: panic.cc  spinlock.c
hal/x86_64/mm/: CMakeLists.txt  context.cc  init.cc  iommap.cc  iommap.hh  kasan.cc  misc.cc  misc.h
hal/x86_64/mm/pgalloc/: find.cc  pgalloc.cc  pgalloc.hh
hal/x86_64/mm/vmmgr/: vm.cc  vm.h  vm.hh  vpm.cc
hal/x86_64/mp/: init.cc
hal/x86_64/proc/: context.S  context.cc  init.S  init.cc  proc.cc  sched.S  sched.cc  thread.cc
hal/x86_64/ps/: CMakeLists.txt  context.S  context.cc  init.cc  proc.cc  sched.S  sched.cc  syscall.S  syscall.cc  syscall.hh  thread.cc
hal/x86_64/smp/: init.cc
init/: CMakeLists.txt  main.c  main.cc  syscall.S  syscall.asm
kernel/: CMakeLists.txt  README.md  config.hh.in  init.c  init.cc  main.c  main.cc
kernel/acpi/: misc.cc  rsdt.cc
kernel/dm/: CMakeLists.txt  bus.cc  devcls.cc  device.cc  devio.cc
kernel/dm/classes/: devcls.json
kernel/ds/: blfb.cc
kernel/exec/: CMakeLists.txt  exec.c  exec.cc
kernel/fs/: devio.cc  file.c  file.cc  fs.c  fs.cc  rootfs.c  rootfs.cc
kernel/initcar/: fileio.cc  init.cc
kernel/io/: context.cc  ctb.cc  dispatch.cc  iocb.cc  ioport.cc  irq.cc
kernel/kasan/: handlers.cc  impl.cc
kernel/kd/: CMakeLists.txt  gdb.cc  logger.cc  stacktrace.cc
kernel/kf/: CMakeLists.txt  atomic.cc  hash.c  hash.cc  hashmap.c  hashmap.c_  misc.cc  rbtree.c  rbtree.cc  string.c
kernel/kf/i386/: CMakeLists.txt
kernel/kfxx/: CMakeLists.txt  allocator.cc  rbtree.cc
kernel/km/: CMakeLists.txt  objmgr.c  objmgr.cc  panic.cc  string.cc
kernel/mm/: CMakeLists.txt  malloc.cc  misc.cc  pgalloc.cc  verify.c  vpm.c  vpm.cc
kernel/mm/kima/: allocator.cc  init.cc  malloc.cc  malloc.hh  small_block.cc  ublk.cc  ublk.hh  vmalloc.cc  vmalloc.hh  vpgdesc.cc  vpgdesc.hh
kernel/mp/: init.cc  misc.cc
kernel/ps/: CMakeLists.txt  exec.cc  init.c  init.cc  kmod.cc  mutex.cc  par.cc  proc.c  proc.cc  sched.cc  semaphore.cc  thread.cc  vmr.cc
kernel/ps/sched/: simploop.c  simploop.cc
kernel/syscall/: CMakeLists.txt  callconv.md  pbcore.cc  pbcore.clt  pbcore.h  pbcore.json
lib/fmtctl/: CMakeLists.txt  fmtctl.c  fmtctl.h  fmtctlConfig.cmake.in
lib/freestdc/: CMakeLists.txt
lib/freestdc/include/: CMakeLists.txt  alloca.h  c_basedefs.h  ctype.h  float.h  inttypes.h  iso646.h  limits.h  math.h  stdalign.h  stdbool.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h
lib/freestdc/include/common/: CMakeLists.txt  format.h  mathex.h
lib/freestdc/include/cxx/: CMakeLists.txt  README.md  algorithm  compare  concepts  coroutine  cstddef  cstdint  cxx_basedefs.hh  functional  initializer_list  iterator  memory  new  ranges  type_traits  utility
lib/freestdc/include/fstdc-utils/: format.h  mathex.h
lib/freestdc/src/: CMakeLists.txt  math.c  new.cc  stdio.c  string.c
lib/freestdc/src/common/: CMakeLists.txt  format.c  i64div.c  mathex.c
lib/freestdc/src/i386/: CMakeLists.txt  string.S
lib/freestdc/src/x86_64/: string.c  (+1 more)
lib/pbkxrt/: CMakeLists.txt  init.cc  misc.cc
modules/: CMakeLists.txt
modules/generic/i8042/: CMakeLists.txt  common.h  kbd.cc  kbd.h  main.cc
modules/generic/kbdcls/: common.cc  common.h  devio.cc  devio.h  main.cc
modules/generic/pcibus/: common.cc  common.h  config_space.h  device.cc  device.h  main.cc  mcfg.cc  mcfg.h
modules/x86_64/pcibus/: CMakeLists.txt  common.cc  common.h  main.cc  mcfg.cc  mcfg.h
modules/x86_64/pciroot/: CMakeLists.txt  common.cc  common.h  main.cc  mcfg.cc  mcfg.h
tools/cargen/: CMakeLists.txt  create.c  extract.c
tools/cltgen/: CMakeLists.txt  cltlex.ll  cltparse.yy  global.h  main.cc
tools/kblrgen/: CMakeLists.txt  kblrgen.c
tools/kimgen/: CMakeLists.txt  create.c  extract.c
tools/pmmgen/: CMakeLists.txt  global.h  main.cc  pmmparse.yy
(+460 files in other folders)
