# Find modules.
set(_GENERIC_MODULE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/generic")
set(_ARCH_MODULE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${PBOS_ARCH}")
file(GLOB _generic_children RELATIVE "${_GENERIC_MODULE_SOURCE_DIR}" "${_GENERIC_MODULE_SOURCE_DIR}/*")
file(GLOB _arch_children RELATIVE "${_ARCH_MODULE_SOURCE_DIR}" "${_ARCH_MODULE_SOURCE_DIR}/*")
set(_KERNEL_MODULES "")
foreach(i ${_generic_children})
    if(IS_DIRECTORY ${_GENERIC_MODULE_SOURCE_DIR}/${i})
        message("Found generic kernel module: ${i}")
        add_subdirectory(${_GENERIC_MODULE_SOURCE_DIR}/${i})
        list(APPEND _KERNEL_MODULES ${i})
    endif()
endforeach()
foreach(i ${_arch_children})
    if(IS_DIRECTORY ${_ARCH_MODULE_SOURCE_DIR}/${i})
        message("Found architecture-specific kernel module: ${i}")
        add_subdirectory(${_ARCH_MODULE_SOURCE_DIR}/${i})
        list(APPEND _KERNEL_MODULES ${i})
    endif()
endforeach()

set_property(GLOBAL PROPERTY KERNEL_MODULES ${_KERNEL_MODULES})
