# Find modules.
set(_GENERIC_MODULE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/generic")
set(_ARCH_MODULE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${PBOS_ARCH}")
file(GLOB _generic_children RELATIVE "${_GENERIC_MODULE_SOURCE_DIR}" "${_GENERIC_MODULE_SOURCE_DIR}/*")
file(GLOB _arch_children RELATIVE "${_ARCH_MODULE_SOURCE_DIR}" "${_ARCH_MODULE_SOURCE_DIR}/*")
foreach(i ${_generic_children})
    if(IS_DIRECTORY ${_GENERIC_MODULE_SOURCE_DIR}/${i})
        add_subdirectory(${_GENERIC_MODULE_SOURCE_DIR}/${i})
    endif()
endforeach()
foreach(i ${_arch_children})
    if(IS_DIRECTORY ${_ARCH_MODULE_SOURCE_DIR}/${i})
        add_subdirectory(${_ARCH_MODULE_SOURCE_DIR}/${i})
    endif()
endforeach()
