get_property(FREESTDC_INCLUDE_DIR GLOBAL PROPERTY FREESTDC_INCLUDE_DIR)
get_property(FREESTDC_INCLUDE_DIR_CXX GLOBAL PROPERTY FREESTDC_INCLUDE_DIR_CXX)

file(GLOB SRC *.h *.hh *.c *.cc *.S)
target_sources(pbhal PRIVATE ${SRC})
target_include_directories(pbhal SYSTEM BEFORE PRIVATE ${FREESTDC_INCLUDE_DIR} ${FREESTDC_INCLUDE_DIR_CXX})
target_link_libraries(pbhal PUBLIC pbarch freestdc pbscintf)

# target_compile_options(pbhal PRIVATE "-mcmodel=large")

add_subdirectory("boot")
add_subdirectory("kd")
add_subdirectory("kf")
add_subdirectory("exec")
add_subdirectory("irq")
add_subdirectory("km")
add_subdirectory("mm")
add_subdirectory("ps")
add_subdirectory("mp")
add_subdirectory("acpi")
add_subdirectory("io")
add_subdirectory("ds")
